--- a/WarehouseEcommerce/Views/Home/Ecommerce.cshtml
+++ b/WarehouseEcommerce/Views/Home/Ecommerce.cshtml
@@ -56,7 +56,7 @@
                         <h4><a href="warehouse-management-system">Warehouse Management</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="warehouse-management-system"><img src="~/img/services/media/warehouse.png"></a>
+                        <a href="warehouse-management-system"><img src="~/img/solutions/Warehouse_management.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Automate your warehouse daily operation to improve accuracy and fulfillment rates.</p>
@@ -69,7 +69,7 @@
                         <h4><a href="stock-control-system">Stock Control</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="stock-control-system"><img src="~/img/services/media/stockcontrol.png"></a>
+                        <a href="stock-control-system"><img src="~/img/solutions/Stock_control.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Accurate real time stock visibility across multiple sites and locations.</p>
@@ -82,7 +82,7 @@
                         <h4><a href="epod-system">EPoD</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="epod-system"><img src="~/img/services/media/epod.png"></a>
+                        <a href="epod-system"><img src="~/img/solutions/EPoD.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Provides reliable and accurate proof of delivery and collection, enabling signature and image capture.</p>
@@ -95,7 +95,7 @@
                         <h4><a href="shoppertrak-business-intelligence">Business Intelligence</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="shoppertrak-business-intelligence"><img src="~/img/services/media/businessintelligence.png"></a>
+                        <a href="shoppertrak-business-intelligence"><img src="~/img/solutions/Business_intelligence.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Help your business to harness the power of data, inventory and loss prevention and turn insights into outcomes.</p>
@@ -108,7 +108,7 @@
                         <h4><a href="real-time-location-system">RFID-IoT</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="real-time-location-system"><img src="~/img/services/media/rfid-iot.png"></a>
+                        <a href="real-time-location-system"><img src="~/img/solutions/Rfid.png"></a>
                     </div>
                     <div class="service-text">
                         <p>RFID Enabled item-level visibility of inventory across the enterprise. TrueVUE provides the foundation for Unified Commerce.</p>
@@ -121,7 +121,7 @@
                         <h4><a href="loss-prevention">Loss Prevention</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="loss-prevention"><img src="~/img/services/media/lossprevention.png"></a>
+                        <a href="loss-prevention"<img src="~/img/solutions/Lose_prevention.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Shrink Management as a Service (SMaaS) designed to help enhance productivity.</p>
