--- a/WarehouseEcommerce/Views/Home/EposSelfService.cshtml
+++ b/WarehouseEcommerce/Views/Home/EposSelfService.cshtml
@@ -9,7 +9,7 @@
     <div class="single-slider ptb-150" style="background-image:url(img/services/epos-banner.jpg)"></div>
     <div class="custom-green" style="padding: 20px; color: #ffffff;">
         <p class="page-title"><strong>EPoSense Electronic Point of Sale & Self Service</strong></p>
-        <p class="page-subtitle">Managed your hospitality or retail store estate from one platform</p>
+        <p class="page-subtitle">Manage your hospitality or retail store estate from one platform</p>
     </div>
 </div>
 
@@ -65,7 +65,7 @@
                         <h4><a href="mobile-device-management">Mobile Device Management</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="mobile-device-management"><img src="~/img/services/media/mdm.png"></a>
+                        <a href="mobile-device-management"><img src="~/img/solutions/Mobile_device_management.png"></a>
                     </div>
                     <div class="service-text">
                         <p>MDM enables you to manage devices in a way which best suits your organisation security and support needs.</p>
@@ -78,7 +78,7 @@
                         <h4><a href="stock-control-system">Stock Control</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="stock-control-system"><img src="~/img/services/media/stockcontrol.png"></a>
+                        <a href="stock-control-system"><img src="~/img/solutions/Stock_control.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Accurate real time stock visibility across multiple sites and locations.</p>
@@ -91,7 +91,7 @@
                         <h4><a href="epod-system">EPoD</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="epod-system"><img src="~/img/services/media/epod.png"></a>
+                        <a href="epod-system"><img src="~/img/solutions/EPoD.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Provides reliable and accurate proof of delivery and collection, enabling signature and image capture.</p>
@@ -104,7 +104,7 @@
                         <h4><a href="real-time-location-system">RFID-IoT</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="real-time-location-system"><img src="~/img/services/media/rfid-iot.png"></a>
+                        <a href="real-time-location-system"><img src="~/img/solutions/Rfid.png"></a>
                     </div>
                     <div class="service-text">
                         <p>RFID Enabled item-level visibility of inventory across the enterprise. TrueVUE provides the foundation for Unified Commerce.</p>
@@ -117,7 +117,7 @@
                         <h4><a href="loss-prevention">Loss Prevention</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="loss-prevention"><img src="~/img/services/media/lossprevention.png"></a>
+                        <a href="loss-prevention"><img src="~/img/solutions/Lose_prevention.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Sensormatic a full Suite of Innovative Solutions Designed to Protect Merchandise and Reduce Shrink.</p>
@@ -130,7 +130,7 @@
                         <h4><a href="ecommerce">eCommerce</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="ecommerce"><img src="~/img/services/media/eCommerce.png"></a>
+                        <a href="ecommerce"><img src="~/img/solutions/Ecommerce.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Integrated web trading platform for B2B or B2C”, apps for mobile/Tablet sales. Marketplace integration.</p>
