--- a/WarehouseEcommerce/Views/Home/FleetTrackingDriverManagement.cshtml
+++ b/WarehouseEcommerce/Views/Home/FleetTrackingDriverManagement.cshtml
@@ -82,7 +82,7 @@
                         <h4><a href="mobile-device-management">Mobile Device Management</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="mobile-device-management"><img src="~/img/services/media/mdm.png"></a>
+                        <a href="mobile-device-management"><img src="~/img/solutions/Mobile_device_management.png"></a>
                     </div>
                     <div class="service-text">
                         <p>MDM enables you to manage devices in a way which best suits your organisation security and support needs.</p>
@@ -95,7 +95,7 @@
                         <h4><a href="stock-control-system">Stock Control</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="stock-control-system"><img src="~/img/services/media/stockcontrol.png"></a>
+                        <a href="stock-control-system"><img src="~/img/solutions/Stock_control.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Accurate real time stock visibility across multiple sites and locations.</p>
@@ -108,7 +108,7 @@
                         <h4><a href="epod-system">EPoD</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="epod-system"><img src="~/img/services/media/epod.png"></a>
+                        <a href="epod-system"><img src="~/img/solutions/EPoD.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Provides reliable and accurate proof of delivery and collection, enabling signature and image capture.</p>
@@ -121,7 +121,7 @@
                         <h4><a href="mobile-van-sales">Mobile Van Sales</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="mobile-van-sales"><img src="~/img/services/media/mobilevansales.png"></a>
+                        <a href="mobile-van-sales"><img src="~/img/solutions/Mobile_van_sales.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Van sales solution effectively manages on-the-road sales operations and payments.</p>
@@ -134,7 +134,7 @@
                         <h4><a href="yard-management">Yard Management</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="yard-management"><img src="~/img/services/media/yardmanagement.png"></a>
+                        <a href="yard-management"><img src="~/img/solutions/Yard_management.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Optimize Your Yard Resources with Intelligent, system-directed dock door management capabilities.</p>
@@ -147,7 +147,7 @@
                         <h4><a href="ecommerce">eCommerce</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="ecommerce"><img src="~/img/services/media/eCommerce.png"></a>
+                        <a href="ecommerce"><img src="~/img/solutions/Ecommerce.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Integrated web trading platform for B2B or B2C”, apps for mobile/Tablet sales. Marketplace integration.</p>
