--- a/WarehouseEcommerce/Views/Home/Index.cshtml
+++ b/WarehouseEcommerce/Views/Home/Index.cshtml
@@ -13,8 +13,8 @@
         <div class="h-100 text-center align-items-center pt-70 pb-70">
             <div class="w-100 text-white">
                 <div class="col-md-offset-4 col-md-4 background-banner">
-                    <h1 class="display-3">BusinesSense Modular Platform</h1>
-                    <p class="lead mb-10">Business Automation, Made Simple and Scalable</p>
+                    <h1 class="display-3">BusinesSense</h1>
+                    <p class="lead mb-10">Class-Leading WMS Solutions For Your Business</p>
                     <a href="getstarted" class="btn btn-group-lg custom-green">Arrange a Demonstration</a>
                 </div>
             </div>
@@ -24,12 +24,12 @@
 <!-- slider-area-end-->
 <!-- What-wedo-area-start -->
 <div class="what-we-do-area pt-50 pb-50">
-    <div class="container-fluid pl-30 pr-30">
+    <div class="container-fluid pl-30 pr-30 index-container">
         <div class="row">
             <div class="col-md-12">
                 <div class="section-title">
                     <!--<h2>What we do</h2>-->
-                    <p><strong>BusinesSense</strong> helps automate and streamline operational success by bringing together your supply chain, order processing, stock control, and distribution processes applications. Suitable for businesses of all sizes, industries and sectors. Our powerful open API & agile architecture ensures Business Sense can easily be scaled to meet the requirements of your business both today and as you grow. Can be integrated into a wide range of market leading ERP and Finance enterprise suites.</p>
+                    <p><strong>BusinessSense - Business Automation made simple and scalable using our powerful, Integrated Warehouse Management Software.</strong><p/><p class="p2">Designed by experts for experts - From rapid goods receipt to highly precise and efficient despatch, BusinessSense Warehouse Management Software is the ideal solution for any business looking for streamlined warehouse management.</p>
                 </div>
             </div>
         </div>
@@ -39,7 +39,7 @@
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
-                                <i class="fa fa-archive"></i>
+                                <img src="~/img/solutions/Warehouse_management.png" />
                             </div>
                             <h3>Warehouse Management</h3>
                             <p>WM Sense enables maximizing throughput, whilst driving down cost with RF Mobile Computers, GoodRx…..</p>
@@ -52,7 +52,7 @@
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
-                                <i class="fa fa-first-order"></i>
+                                <img src="~/img/solutions/Stock_control.png" />
                             </div>
                             <h3>Order Management</h3>
                             <p>End to End visibility, achieve complete purchasing control with improved customer communications…..</p>
@@ -65,7 +65,7 @@
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
-                                <i class="fa fa-contao"></i>
+                                <img src="~/img/solutions/Stock_control.png" />
                             </div>
                             <h3>Stock Management</h3>
                             <p>Reduce costs with precise stock level optimization, Meaning you ‘ll have the information to better match…..</p>
@@ -78,7 +78,7 @@
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
-                                <i class="fa fa-get-pocket"></i>
+                                <img src="~/img/solutions/EPoD.png" />
                             </div>
                             <h3>EPoD</h3>
                             <p>Delivering the right products to your customers at the right time is vital in maintaining high levels of customer…..</p>
@@ -94,7 +94,7 @@
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
-                                <i class="fa fa-road"></i>
+                                <img src="~/img/solutions/Fleet_tracking.png" />
                             </div>
                             <h3>Fleet Tracking & Driver Management</h3>
                             <p>Real-time vehicle tracking and route analysis. Route replay measuring driver behavior and speed…..</p>
@@ -107,9 +107,9 @@
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
-                                <i class="fa fa-truck"></i>
+                                <img src="~/img/solutions/Yard_management.png" />
                             </div>
-                            <h3>Yard Managemen</h3>
+                            <h3>Yard Management</h3>
                             <p>Optimize Your Yard Resources, extend the management of your distribution facility beyond the four walls…..</p>
                         </div>
                     </div>
@@ -120,7 +120,7 @@
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
-                                <i class="fa fa-opencart"></i>
+                                <img src="~/img/solutions/Ecommerce.png" />
                             </div>
                             <h3>eCommerce</h3>
                             <p>Integrated web trading platform for B2B or B2C”, fully response for mobile/Tablet sales. Marketplace integration…..</p>
@@ -133,7 +133,7 @@
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
-                                <i class="fa fa-check"></i>
+                                <img src="~/img/solutions/Epose_self_service.png" />
                             </div>
                             <h3>EPoS & Self Service</h3>
                             <p>Fully integrated single resilient platform to managed your hospitality or retail store estate with support…</p>
@@ -149,7 +149,7 @@
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
-                                <i class="fa fa-money"></i>
+                                <img src="~/img/solutions/Mobile_van_sales.png" />
                             </div>
                             <h3>Field/Van Mobile Sales</h3>
                             <p>The latest Android mobile devices allow field staff to be operationally connected to your business at all times…..</p>
@@ -162,7 +162,7 @@
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
-                                <i class="fa fa-shield"></i>
+                                <img src="~/img/solutions/Asset_location.png" />
                             </div>
                             <h3>Asset Location</h3>
                             <p>Asset protection and real-time tracking by deploying both Active RFID location beacons supported by current WiFi….</p>
@@ -175,7 +175,7 @@
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
-                                <i class="fa fa-users"></i>
+                                <img src="~/img/solutions/Human_resources.png" />
                             </div>
                             <h3>Human Resources</h3>
                             <p>Time and Attendance with Bio-metrics, HR automation reduce the time spent on paper chasing leave requests…..</p>
@@ -188,7 +188,7 @@
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
-                                <i class="fa fa-trademark"></i>
+                                <img src="~/img/solutions/Mobile_device_management.png" />
                             </div>
                             <h3>Mobile Device Management</h3>
                             <p>Fusion UEM brings the industry-leading device management portfolio of applications – to Android …..</p>
@@ -203,7 +203,7 @@
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
-                                <i class="fa fa-digg"></i>
+                                <img src="~/img/solutions/Digital_signage.png" />
                             </div>
                             <h3>Digital Signage</h3>
                             <p>Illumineye designed to make high-quality digital signage available to everyone. Ideal for retail, transportation…..</p>
@@ -216,7 +216,7 @@
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
-                                <i class="fa fa-search-minus"></i>
+                                <img src="~/img/solutions/Business_intelligence.png" />
                             </div>
                             <h3>Business Intelligence</h3>
                             <p>ShopperTrak Provides actionable dashboards and alerts, inventory accuracy and on-floor availability products. Supply important…..</p>
@@ -229,7 +229,7 @@
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
-                                <i class="fa fa-soundcloud"></i>
+                                <img src="~/img/solutions/Lose_prevention.png" />
                             </div>
                             <h3>Loss Prevention</h3>
                             <p>Shrink Management as a Service (SMaaS) is a cloud-based offering designed to help enhance productivity…..</p>
@@ -242,7 +242,7 @@
                     <div class="single-What-wedo mb-30">
                         <div class="What-wedo-text text-center">
                             <div class="icon-box">
-                                <i class="fa fa-briefcase"></i>
+                                <img src="~/img/solutions/Rfid.png" />
                             </div>
                             <h3>RFID Retail Inventory</h3>
                             <p>TrueVue RFID Inventory & Supply Chain intelligence enables Smarter Decision Making, enable retailers to harness data and …..</p>
