--- a/WarehouseEcommerce/Views/Home/LossPrevention.cshtml
+++ b/WarehouseEcommerce/Views/Home/LossPrevention.cshtml
@@ -57,15 +57,18 @@
             </p>
         </div>
         <div class="col-md-6 side-img">
-            <div class="mb-10 plr">
-                <img src="~/img/services/lp-top.jpg">
-            </div>
-            <div class="mb-10 plr">
-                <img src="~/img/services/lp-middle.jpg">
-            </div>
-            <div class="mb-10 plr">
+            <div class="mb-10 plr first-img">
                 <img src="~/img/services/lp-bottom.jpg">
             </div>
+            <div class="second-img plr">
+                <div class="mb-10 mr-10 its-width">
+                    <img src="~/img/services/lp-top.jpg">
+                </div>
+                <div class="mb-10 its-width">
+                    <img src="~/img/services/lp-middle.jpg">
+                </div>
+            </div>
+            
         </div>
     </div>
 </section>
