--- a/WarehouseEcommerce/Views/Home/MobileVanSales.cshtml
+++ b/WarehouseEcommerce/Views/Home/MobileVanSales.cshtml
@@ -57,7 +57,7 @@
                         <h4><a href="mobile-device-management">Mobile Device Management</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="mobile-device-management"><img src="~/img/services/media/mdm.png"></a>
+                        <a href="mobile-device-management"><img src="~/img/solutions/Mobile_device_management.png"></a>
                     </div>
                     <div class="service-text">
                         <p>MDM enables you to manage devices in a way which best suits your organisation security and support needs.</p>
@@ -70,7 +70,7 @@
                         <h4><a href="stock-control-system">Stock Control</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="stock-control-system"><img src="~/img/services/media/stockcontrol.png"></a>
+                        <a href="stock-control-system"><img src="~/img/solutions/Stock_control.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Accurate real time stock visibility across multiple sites and locations.</p>
@@ -83,7 +83,7 @@
                         <h4><a href="epod-system">EPoD</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="epod-system"><img src="~/img/services/media/epod.png"></a>
+                        <a href="epod-system"><img src="~/img/solutions/EPoD.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Provides reliable and accurate proof of delivery and collection, enabling signature and image capture.</p>
@@ -96,7 +96,7 @@
                         <h4><a href="warehouse-management-system">Warehouse Management</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="warehouse-management-system"><img src="~/img/services/media/warehouse.png"></a>
+                        <a href="warehouse-management-system"><img src="~/img/solutions/Warehouse_management.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Automate your warehouse daily operation to improve accuracy and fulfillment rates.</p>
@@ -109,7 +109,7 @@
                         <h4><a href="yard-management">Yard Management</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="yard-management"><img src="~/img/services/media/yardmanagement.png"></a>
+                        <a href="yard-management"><img src="~/img/solutions/Yard_management.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Optimize Your Yard Resources with Intelligent, system-directed dock door management capabilities.</p>
@@ -122,7 +122,7 @@
                         <h4><a href="fleet-management-system">Fleet Tracking</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="fleet-management-system"><img src="~/img/services/media/fleettracking.png"></a>
+                        <a href="fleet-management-system"><img src="~/img/solutions/Fleet_tracking.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Visualize your Fleet assets and activity at a glance with live dashboards, mapping and historical driver data.</p>
