--- a/WarehouseEcommerce/Views/Home/HumanResources.cshtml
+++ b/WarehouseEcommerce/Views/Home/HumanResources.cshtml
@@ -8,8 +8,8 @@
 <div class="slider-area">
     <div class="single-slider ptb-150" style="background-image:url(img/services/hr-banner.jpg)"></div>
     <div class="custom-green" style="padding: 20px; color: #ffffff;">
-        <p class="page-title"><strong>TimeSense Cloud Web Based Biometric System</strong></p>
-        <p class="page-subtitle">Managing your staff leave, Time and Attendance needs Globally</p>
+        <p class="page-title"><strong>TimeSense - Staff management software that saves hours</strong></p>
+        <p class="page-subtitle">An easy to use, all in one employee scheduling app that scales with your business.</p>
     </div>
 </div>
 
@@ -76,7 +76,7 @@
                         <h4><a href="warehouse-management-system">Warehouse Management</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="warehouse-management-system"><img src="~/img/services/media/warehouse.png"></a>
+                        <a href="warehouse-management-system"><img src="~/img/solutions/Warehouse_management.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Automate your warehouse daily operation to improve accuracy and fulfillment rates.</p>
@@ -89,7 +89,7 @@
                         <h4><a href="truevue-retail-rfid-solution">Retail Solutions</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="truevue-retail-rfid-solution"><img src="~/img/services/media/retailsolutions.png"></a>
+                        <a href="truevue-retail-rfid-solution"><img src="~/img/solutions/Retail_solutions.png"></a>
                     </div>
                     <div class="service-text">
                         <p>RFID Inventory intelligence enables Smarter Decision Making, enable retailers to harness data.</p>
@@ -102,7 +102,7 @@
                         <h4><a href="epod-system">EPoD</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="epod-system"><img src="~/img/services/media/epod.png"></a>
+                        <a href="epod-system"><img src="~/img/solutions/EPoD.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Provides reliable and accurate proof of delivery and collection, enabling signature and image capture.</p>
@@ -115,7 +115,7 @@
                         <h4><a href="real-time-location-system">RFID-IoT</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="real-time-location-system"><img src="~/img/services/media/rfid-iot.png"></a>
+                        <a href="real-time-location-system"><img src="~/img/solutions/Rfid.png"></a>
                     </div>
                     <div class="service-text">
                         <p>RFID Enabled item-level visibility of inventory across the enterprise. TrueVUE provides the foundation for Unified Commerce.</p>
@@ -128,7 +128,7 @@
                         <h4><a href="loss-prevention">Loss Prevention</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="loss-prevention"><img src="~/img/services/media/lossprevention.png"></a>
+                        <a href="loss-prevention"><img src="~/img/solutions/Lose_prevention.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Sensormatic a full Suite of Innovative Solutions Designed to Protect Merchandise and Reduce Shrink.</p>
@@ -141,7 +141,7 @@
                         <h4><a href="ecommerce">eCommerce</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="ecommerce"><img src="~/img/services/media/eCommerce.png"></a>
+                        <a href="ecommerce"><img src="~/img/solutions/Ecommerce.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Integrated web trading platform for B2B or B2C”, apps for mobile/Tablet sales. Marketplace integration.</p>
