--- a/WarehouseEcommerce/Views/Home/OrderManagement.cshtml
+++ b/WarehouseEcommerce/Views/Home/OrderManagement.cshtml
@@ -89,7 +89,7 @@
                         <h4><a href="warehouse-management-system">Warehouse Management</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="warehouse-management-system"><img src="~/img/services/media/warehouse.png"></a>
+                        <a href="warehouse-management-system"><img src="~/img/solutions/Warehouse_management.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Automate your warehouse daily operation to improve accuracy and fulfillment rates.</p>
@@ -102,7 +102,7 @@
                         <h4><a href="stock-control-system">Stock Control</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="stock-control-system"><img src="~/img/services/media/stockcontrol.png"></a>
+                        <a href="stock-control-system"><img src="~/img/solutions/Stock_control.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Accurate real time stock visibility across multiple sites and locations.</p>
@@ -115,7 +115,7 @@
                         <h4><a href="epod-system">EPoD</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="epod-system"><img src="~/img/services/media/epod.png"></a>
+                        <a href="epod-system"><img src="~/img/solutions/EPoD.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Provides reliable and accurate proof of delivery and collection, enabling signature and image capture.</p>
@@ -128,7 +128,7 @@
                         <h4><a href="shoppertrak-business-intelligence">Business Intelligence</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="shoppertrak-business-intelligence"><img src="~/img/services/media/businessintelligence.png"></a>
+                        <a href="shoppertrak-business-intelligence"><img src="~/img/solutions/Business_intelligence.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Help your business to harness the power of data, inventory and loss prevention and turn insights into outcomes.</p>
@@ -141,7 +141,7 @@
                         <h4><a href="HR-time-and-attendance">Human Resources</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="HR-time-and-attendance"><img src="~/img/services/media/humanresources.png"></a>
+                        <a href="HR-time-and-attendance"><img src="~/img/solutions/Human_resources.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Time and Attendance with Bio-metrics with HR paperless process automation.</p>
@@ -154,7 +154,7 @@
                         <h4><a href="ecommerce">eCommerce</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="ecommerce"><img src="~/img/services/media/eCommerce.png"></a>
+                        <a href="ecommerce"><img src="~/img/solutions/Ecommerce.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Integrated web trading platform for B2B or B2C”, apps for mobile/Tablet sales. Marketplace integration.</p>
