--- a/WarehouseEcommerce/Views/Home/StockControl.cshtml
+++ b/WarehouseEcommerce/Views/Home/StockControl.cshtml
@@ -68,7 +68,7 @@
                         <h4><a href="mobile-device-management">Mobile Device Management</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="mobile-device-management"><img src="~/img/services/media/mdm.png"></a>
+                        <a href="mobile-device-management"><img src="~/img/solutions/Mobile_device_management.png"></a>
                     </div>
                     <div class="service-text">
                         <p>MDM enables you to manage devices in a way which best suits your organisation security and support needs.</p>
@@ -81,7 +81,7 @@
                         <h4><a href="epod-system">EPoD</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="epod-system"><img src="~/img/services/media/epod.png"></a>
+                        <a href="epod-system"><img src="~/img/solutions/EPoD.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Provides reliable and accurate proof of delivery and collection, enabling signature and image capture.</p>
@@ -94,7 +94,7 @@
                         <h4><a href="courier-integration">Courier Integration</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="courier-integration"><img src="~/img/services/media/courierintegration.png"></a>
+                        <a href="courier-integration"><img src="~/img/solutions/Courier_integration.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Improve delivery accuracy and streamline dispatch by pushing address details to your logistics provider.</p>
@@ -107,7 +107,7 @@
                         <h4><a href="mobile-van-sales">Mobile Van Sales</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="mobile-van-sales"><img src="~/img/services/media/mobilevansales.png"></a>
+                        <a href="mobile-van-sales"><img src="~/img/solutions/Mobile_van_sales.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Van sales solution effectively manages on-the-road sales operations and payments.</p>
@@ -120,7 +120,7 @@
                         <h4><a href="yard-management">Yard Management</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="yard-management"><img src="~/img/services/media/yardmanagement.png"></a>
+                        <a href="yard-management"><img src="~/img/solutions/Yard_management.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Optimize Your Yard Resources with Intelligent, system-directed dock door management capabilities.</p>
@@ -133,7 +133,7 @@
                         <h4><a href="fleet-management-system">Fleet Tracking</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="fleet-management-system"><img src="~/img/services/media/fleettracking.png"></a>
+                        <a href="fleet-management-system"><img src="~/img/solutions/Fleet_tracking.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Visualize your Fleet assets and activity at a glance with live dashboards, mapping and historical driver data.</p>
