--- a/WarehouseEcommerce/Views/Home/WarehouseManagement.cshtml
+++ b/WarehouseEcommerce/Views/Home/WarehouseManagement.cshtml
@@ -76,7 +76,7 @@
                         <h4><a href="mobile-device-management">Mobile Device Management</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="mobile-device-management"><img src="~/img/services/media/mdm.png"></a>
+                        <a href="mobile-device-management"><img src="~/img/solutions/Mobile_device_management.png"></a>
                     </div>
                     <div class="service-text">
                         <p>MDM enables you to manage devices in a way which best suits your organisation security and support needs.</p>
@@ -89,7 +89,7 @@
                         <h4><a href="stock-control-system">Stock Control</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="stock-control-system"><img src="~/img/services/media/stockcontrol.png"></a>
+                        <a href="stock-control-system"><img src="~/img/solutions/Stock_control.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Accurate real time stock visibility across multiple sites and locations.</p>
@@ -102,7 +102,7 @@
                         <h4><a href="courier-integration">Courier Integration</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="courier-integration"><img src="~/img/services/media/courierintegration.png"></a>
+                        <a href="courier-integration"><img src="~/img/solutions/Courier_integration.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Improve delivery accuracy and streamline dispatch by pushing address details to your logistics provider.</p>
@@ -115,7 +115,7 @@
                         <h4><a href="mobile-van-sales">Mobile Van Sales</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="mobile-van-sales"><img src="~/img/services/media/mobilevansales.png"></a>
+                        <a href="mobile-van-sales"><img src="~/img/solutions/Mobile_van_sales.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Van sales solution effectively manages on-the-road sales operations and payments.</p>
@@ -128,7 +128,7 @@
                         <h4><a href="yard-management">Yard Management</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="yard-management"><img src="~/img/services/media/yardmanagement.png"></a>
+                        <a href="yard-management"><img src="~/img/solutions/Yard_management.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Optimize Your Yard Resources with Intelligent, system-directed dock door management capabilities.</p>
@@ -141,7 +141,7 @@
                         <h4><a href="fleet-management-system">Fleet Tracking</a></h4>
                     </div>
                     <div class="service-icon">
-                        <a href="fleet-management-system"><img src="~/img/services/media/fleettracking.png"></a>
+                        <a href="fleet-management-system"><img src="~/img/solutions/Fleet_tracking.png"></a>
                     </div>
                     <div class="service-text">
                         <p>Visualize your Fleet assets and activity at a glance with live dashboards, mapping and historical driver data.</p>
