--- a/WarehouseEcommerce/Views/Shared/_HeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Shared/_HeaderPartial.cshtml
@@ -35,14 +35,14 @@
         <!-- main-menu-area-start -->
         <div class="main-menu-area" id="navbar">
             <div class="pr-30 pl-30">
-                <div class="row ptb-10">
-                    <div class="col-md-3 col-sm-2">
+                <div class="row ptb-10 navbar-row">
+                    <div class="logo-div">
                         <div class="logo">
                             <a href="home"><img src="~/img/logo/logo.png" alt="" width="200" /></a>
                         </div>
                     </div>
-                    <div class="col-md-9 col-sm-10">
-                        <div class="main-menu floatright">
+                    <div class="top-menu">
+                        <div class="main-menu">
                             <nav id="primary_nav_wrap" class="header-nav">
                                 <ul>
                                     <li>
